# bw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bw.c
examples/: README.md  cat.bw  hw.bw
src/: args.c  args.h  ast.c  ast.h  codegen.c  codegen.h  common.c  common.h  lexer.c  lexer.h  main.c  syscalls.c  syscalls.h
